太忙,先提交未完成部分代码(基本数组类型未支持)